vm/42sh_tester/public/input_logs/error_logs/42sh_539
42sh:1:27: [1m[91merror[0m: unexpected end of file
  1  |  echo $(( ( 2 + 3 + 5 ))    
     |                            [1m[91m^[0m
